# SoundMetricsStudio

./: .env.example  README.md  dev.sh  pyproject.toml  server.py
app/: config.py  main.py  prompts.py
app/routes/: analyze.py  chat.py  debug.py  search.py
app/services/: anthropic_client.py  chartmetric.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ArtistCharts.tsx  ArtistItem.tsx  ArtistPanel.tsx  ChatPanel.tsx  MessageBubble.tsx
frontend/src/hooks/: useAnalysisStream.ts  useArtistSearch.ts  useChatStream.ts
static/: index.html
static/assets/: index-DKz1sy-o.js  index-Gob3mnUB.css
