[project]
name = "chartmetric-mcp"
version = "0.1.0"
description = "MCP server for Chartmetric API via pycmc"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "pycmc",
    "fastapi>=0.115",
    "anthropic>=0.40",
    "python-multipart>=0.0.9",
    "uvicorn[standard]",
    "python-dotenv",
    "anyio",
]

[project.scripts]
chartmetric-mcp = "server:mcp"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
